--- a/src/main/resources/com/example/project_covid_app/Ayman/pharmacistDashPrimary.fxml
+++ b/src/main/resources/com/example/project_covid_app/Ayman/pharmacistDashPrimary.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.project_covid_app.Ayman.PharmacistDashPrimary"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_covid_app.Ayman.PharmacistDashPrimary">
+   <children>
+      <Label fx:id="pharmacistDashboardTitleLabel" layoutX="237.0" prefHeight="59.0" prefWidth="125.0" text="Pharmacist Dashboard" wrapText="true" />
+      <HBox fx:id="hBoxForNagivation" layoutX="14.0" layoutY="14.0" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Button fx:id="backButtonPharmacistDashHbox" mnemonicParsing="false" text="Back" />
+            <Button fx:id="homeButtonPharmacistDashHbox" mnemonicParsing="false" text="Home" />
+         </children>
+      </HBox>
+   </children>
 </AnchorPane>
