--- a/src/main/resources/com/example/project_covid_app/Ayman/prescriptionPane.fxml
+++ b/src/main/resources/com/example/project_covid_app/Ayman/prescriptionPane.fxml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.project_covid_app.Ayman.PrescriptionController"
-            prefWidth="750" prefHeight="400">
+<AnchorPane prefHeight="400" prefWidth="750" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_covid_app.Ayman.PrescriptionController">
 
-    <TableView fx:id="tblPrescriptions"
-               layoutX="10" layoutY="10"
-               prefWidth="730" prefHeight="330">
+    <TableView fx:id="tblPrescriptions" layoutX="10" layoutY="10" prefHeight="330" prefWidth="730">
         <columns>
-            <TableColumn text="ID" fx:id="colRxID"/>
-            <TableColumn text="Patient" fx:id="colPatientID"/>
-            <TableColumn text="Med" fx:id="colMedication"/>
-            <TableColumn text="Date" fx:id="colDate"/>
+            <TableColumn fx:id="colRxID" text="ID" />
+            <TableColumn fx:id="colPatientID" text="Patient" />
+            <TableColumn fx:id="colMedication" text="Med" />
+            <TableColumn fx:id="colDate" text="Date" />
         </columns>
     </TableView>
-    <Button text="Verify" layoutX="340" layoutY="350" onAction="#onVerifyPrescription"/>
+    <Button fx:id="verifybtn" layoutX="340" layoutY="350" onAction="#onVerifyPrescription" text="Verify" />
 </AnchorPane>
