--- a/src/main/resources/com/example/project_covid_app/Rafi/Rafi.fxml
+++ b/src/main/resources/com/example/project_covid_app/Rafi/Rafi.fxml
@@ -8,7 +8,7 @@
 
 
 <?import javafx.scene.control.TextField?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_covid_app.Rafi.RafiController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_covid_app.Rafi.Raficontroller">
    <children>
       <Label layoutX="269.0" layoutY="31.0" text="Sign in">
          <font>
