--- a/src/main/resources/com/example/project_covid_app/Rafi/New account.fxml
+++ b/src/main/resources/com/example/project_covid_app/Rafi/New account.fxml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<?import javafx.scene.control.TextField?>
-<AnchorPane prefHeight="825.0" prefWidth="698.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_covid_app.Rafi.NewAccountController">
+<AnchorPane prefHeight="825.0" prefWidth="916.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_covid_app.Rafi.NewAccountController">
    <children>
-      <Label layoutX="244.0" layoutY="79.0" text="Lest Create a new account!">
+      <Label layoutX="375.0" layoutY="77.0" text="Lest Create a new account!">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="230.0" layoutY="32.0" text="COVID-19 Application">
+      <Label layoutX="360.0" layoutY="29.0" text="COVID-19 Application">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
@@ -31,31 +29,31 @@
       <Label layoutX="35.0" layoutY="282.0" text="Blood group" />
       <Label layoutX="58.0" layoutY="326.0" text="Age" />
       <Label layoutX="48.0" layoutY="451.0" text="Name" />
-      <Label layoutX="209.0" layoutY="407.0" text="Emergency Contacts">
+      <Label layoutX="378.0" layoutY="399.0" text="Emergency Contacts">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
       </Label>
       <Label layoutX="24.0" layoutY="492.0" text="Phone Number" />
       <Label layoutX="46.0" layoutY="534.0" text="Relation" />
-      <TextField layoutX="134.0" layoutY="118.0" prefHeight="26.0" prefWidth="409.0" />
-      <TextField layoutX="134.0" layoutY="159.0" prefHeight="26.0" prefWidth="410.0" />
-      <TextField layoutX="133.0" layoutY="278.0" prefHeight="26.0" prefWidth="410.0" />
-      <TextField layoutX="134.0" layoutY="488.0" prefHeight="26.0" prefWidth="410.0" />
-      <TextField layoutX="133.0" layoutY="240.0" prefHeight="26.0" prefWidth="410.0" />
-      <TextField layoutX="133.0" layoutY="322.0" prefHeight="26.0" prefWidth="410.0" />
-      <DatePicker layoutX="133.0" layoutY="199.0" prefHeight="26.0" prefWidth="208.0" />
-      <TextField layoutX="134.0" layoutY="367.0" prefHeight="26.0" prefWidth="410.0" />
-      <TextField layoutX="133.0" layoutY="447.0" prefHeight="26.0" prefWidth="410.0" />
-      <TextField layoutX="134.0" layoutY="530.0" prefHeight="26.0" prefWidth="410.0" />
-      <ComboBox layoutX="213.0" layoutY="712.0" prefHeight="26.0" prefWidth="218.0" promptText="Select Your User Type" />
-      <CheckBox layoutX="57.0" layoutY="789.0" mnemonicParsing="false" text="By Clicking this Your are agree to COVID-19 Terms and Conditions" />
+      <TextField fx:id="PNameTextField" layoutX="134.0" layoutY="118.0" prefHeight="26.0" prefWidth="650.0" />
+      <TextField fx:id="PNIDTextField" layoutX="134.0" layoutY="159.0" prefHeight="26.0" prefWidth="650.0" />
+      <TextField fx:id="PbloodTextField" layoutX="133.0" layoutY="278.0" prefHeight="26.0" prefWidth="650.0" />
+      <TextField fx:id="EPphoneNoTextfield" layoutX="134.0" layoutY="488.0" prefHeight="26.0" prefWidth="650.0" />
+      <TextField fx:id="PGenderTextField" layoutX="133.0" layoutY="240.0" prefHeight="26.0" prefWidth="650.0" />
+      <TextField fx:id="PageTextfield" layoutX="133.0" layoutY="322.0" prefHeight="26.0" prefWidth="650.0" />
+      <DatePicker fx:id="dateDatepicker" layoutX="133.0" layoutY="199.0" prefHeight="26.0" prefWidth="650.0" promptText="DD/MM/YYYY" />
+      <TextField fx:id="PphoneNoTextfield" layoutX="134.0" layoutY="367.0" prefHeight="26.0" prefWidth="650.0" />
+      <TextField fx:id="EPnameTextField" layoutX="133.0" layoutY="447.0" prefHeight="26.0" prefWidth="650.0" />
+      <TextField fx:id="EPrelationTextfield" layoutX="134.0" layoutY="530.0" prefHeight="26.0" prefWidth="650.0" />
+      <ComboBox fx:id="UserTypeComboBox" layoutX="335.0" layoutY="702.0" prefHeight="26.0" prefWidth="218.0" promptText="Select Your User Type" />
+      <CheckBox fx:id="termsCondition" layoutX="57.0" layoutY="789.0" mnemonicParsing="false" text="By Clicking this Your are agree to COVID-19 Terms and Conditions" />
       <Label layoutX="39.0" layoutY="612.0" text="Password" />
       <Label layoutX="22.0" layoutY="659.0" text="Rewrite Password" />
-      <TextField layoutX="144.0" layoutY="608.0" prefHeight="26.0" prefWidth="410.0" />
-      <TextField layoutX="144.0" layoutY="655.0" prefHeight="26.0" prefWidth="410.0" />
-      <Label layoutX="40.0" layoutY="767.0" text="COVID-19 app Terms of Use" />
-      <Button layoutX="554.0" layoutY="763.0" mnemonicParsing="false" text="Submitt" />
-      <Button layoutX="35.0" layoutY="32.0" mnemonicParsing="false" text="Back" />
+      <TextField fx:id="PasswordCreatPasswordfield" layoutX="144.0" layoutY="608.0" onKeyTyped="#passOnKeyTyped" prefHeight="26.0" prefWidth="650.0" promptText="This box must be field andcontain atleast 6 digit, numbers and spacial characters" />
+      <TextField fx:id="recreatpasswordPasswordfield" layoutX="144.0" layoutY="655.0" onKeyTyped="#paccOnKeyTyped" prefHeight="26.0" prefWidth="650.0" />
+      <Label layoutX="40.0" layoutY="767.0" text="COVID-19 Application Terms of Use" />
+      <Button layoutX="794.0" layoutY="776.0" mnemonicParsing="false" onAction="#SubmitOnAction" text="Submitt" />
+      <Button layoutX="35.0" layoutY="32.0" mnemonicParsing="false" onAction="#backOnAction" text="Back" />
    </children>
 </AnchorPane>
