Ayman All controllers and FXML Updated Added AymanLoginDemo....V6

--- a/src/main/resources/com/example/project_covid_app/Ayman/communitySupportWorkerDashboardView.fxml
+++ b/src/main/resources/com/example/project_covid_app/Ayman/communitySupportWorkerDashboardView.fxml
@@ -13,8 +13,8 @@
 
     <TabPane layoutX="20" layoutY="80" prefWidth="760" prefHeight="500">
         <Tab text="Patients">
-            <fx:include source="PatientRecordPane.fxml"/>
+            <fx:include source="patientRecordPane.fxml"/>
         </Tab>
-        <!-- Add more tabs for other goals -->
+
     </TabPane>
 </AnchorPane>
