--- a/src/main/resources/com/example/project_covid_app/Ayman/prescriptionPane.fxml
+++ b/src/main/resources/com/example/project_covid_app/Ayman/prescriptionPane.fxml
@@ -1,19 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400" prefWidth="750" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_covid_app.Ayman.PrescriptionController">
+<AnchorPane prefHeight="727.0" prefWidth="918.0"
+            xmlns="http://javafx.com/javafx/23"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.project_covid_app.Ayman.PrescriptionController">
+
 
     <TableView fx:id="tblPrescriptions" layoutX="10" layoutY="10" prefHeight="330" prefWidth="730">
         <columns>
-            <TableColumn fx:id="colRxID" text="ID" />
-            <TableColumn fx:id="colPatientID" text="Patient" />
-            <TableColumn fx:id="colMedication" text="Med" />
-            <TableColumn fx:id="colDate" text="Date" />
+            <TableColumn fx:id="colRxID"       text="ID"      />
+            <TableColumn fx:id="colPatientID"  text="Patient" />
+            <TableColumn fx:id="colMedication" text="Med"     />
+            <TableColumn fx:id="colDate"       text="Date"    />
         </columns>
     </TableView>
-    <Button fx:id="verifybtn" layoutX="340" layoutY="350" onAction="#onVerifyPrescription" text="Verify" />
+
+
+    <ComboBox fx:id="comboboxPrescriptionPaneRowSelect"
+              layoutX="15" layoutY="350"
+              prefWidth="150"
+              promptText="Select Row" />
+
+
+    <TextField fx:id="prescriptionPaneTextField"  layoutX="200" layoutY="350" promptText="ID" />
+    <TextField fx:id="prescriptionPaneTextField2" layoutX="200" layoutY="390" promptText="Patient" />
+    <TextField fx:id="prescriptionPaneTextField3" layoutX="375" layoutY="350" promptText="Med" />
+    <TextField fx:id="prescriptionPaneTextField4" layoutX="375" layoutY="390" promptText="Date" />
+
+
+    <Button fx:id="addBtnPrescriptionPane"
+            layoutX="15" layoutY="430"
+            prefHeight="30" prefWidth="100"
+            text="Add"
+            onAction="#onAddPrescription"/>
+    <Button fx:id="verifybtn"
+            layoutX="130" layoutY="430"
+            text="Verify"
+            onAction="#onVerifyPrescription"/>
 </AnchorPane>
